--- a/packages/ko-request/package.json
+++ b/packages/ko-request/package.json
@@ -6,7 +6,7 @@
 	"main": "lib/index.js",
 	"module": "es/index.js",
 	"scripts": {
-		"build": "rollup -c",
+		"build": "rollup -c && npm run build:lib",
 		"build:lib": "rollup -c rollup.config.lib.js",
 		"dev": "rollup -c -w"
 	},
