--- a/packages/ko-util/package.json
+++ b/packages/ko-util/package.json
@@ -3,7 +3,8 @@
   "version": "1.11.5",
   "description": "袋鼠工具库",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && npm run build:lib",
+    "build:lib": "rollup -c rollup.config.lib.js",
     "dev": "rollup -c -w"
   },
   "homepage": "",
@@ -31,6 +32,7 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@rollup/plugin-buble": "^0.21.0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-json": "^4.0.1",
@@ -40,7 +42,9 @@
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-cpy": "^2.0.1",
-    "rollup-plugin-terser": "^5.1.3"
+    "rollup-plugin-terser": "^5.1.3",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "typescript": "^4.1.2"
   },
   "gitHead": "b62d264650b9bb52d3c3316cfb69c45ed71d34a6"
 }
