--- a/packages/ko-script/package.json
+++ b/packages/ko-script/package.json
@@ -48,6 +48,8 @@
   },
   "dependencies": {
     "@kodesign/ko-babel-app": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "assets-webpack-plugin": "^3.9.10",
     "autoprefixer": "^9.7.3",
     "awesome-typescript-loader": "^5.2.1",
@@ -66,6 +68,10 @@
     "deepmerge": "^4.2.2",
     "detect-port": "^1.3.0",
     "download-git-repo": "^3.0.2",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.21.5",
     "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -75,6 +81,7 @@
     "inquirer": "^7.0.3",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "lint-staged": "^10.5.2",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
@@ -83,6 +90,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ora": "^4.0.3",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.2.1",
     "pushstate-server": "^3.1.0",
     "react-dev-utils": "^9.0.3",
     "request": "^2.88.0",
