--- a/packages/ko-script/package.json
+++ b/packages/ko-script/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ko-script",
   "author": "kodesign",
-  "version": "4.25.10",
+  "version": "4.25.11-alpha.0",
   "description": "基于webpack打包cli工具",
   "main": "index.js",
   "module": "",
