--- a/packages/ko-request/package.json
+++ b/packages/ko-request/package.json
@@ -4,7 +4,7 @@
 	"version": "1.3.6",
 	"description": "基于axios和fetch封装的request工具，添加有拦截器，方便快速配置使用",
 	"main": "lib/index.js",
-	"module": "es/index.js",
+	"module": "lib/index.js",
 	"scripts": {
 		"build": "rollup -c && npm run build:lib",
 		"build:lib": "rollup -c rollup.config.lib.js",
