--- a/packages/ko-script/package.json
+++ b/packages/ko-script/package.json
@@ -47,65 +47,59 @@
     "url": "https://github.com/dtux-kangaroo/ko-script/issues"
   },
   "dependencies": {
-    "@kodesign/ko-babel-app": "^8.0.1",
-    "assets-webpack-plugin": "^3.9.10",
-    "autoprefixer": "^9.7.3",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-import": "^1.13.0",
-    "camelcase": "^5.3.1",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "clean-webpack-plugin": "1.0.0",
+    "assets-webpack-plugin": "^7.0.0",
+    "autoprefixer": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "camelcase": "^6.2.0",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "clean-webpack-plugin": "3.0.0",
     "colors": "^1.4.0",
-    "commander": "^4.1.0",
-    "compressing": "^1.5.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.1",
-    "decamelize": "^3.2.0",
+    "commander": "^6.2.1",
+    "compressing": "^1.5.1",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
+    "decamelize": "^4.0.0",
     "deep-assign": "^3.0.0",
     "deepmerge": "^4.2.2",
     "detect-port": "^1.3.0",
     "download-git-repo": "^3.0.2",
-    "file-loader": "^5.0.2",
-    "fork-ts-checker-webpack-plugin": "^3.1.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.6",
     "happypack": "^5.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^3.2.0",
-    "inquirer": "^7.0.3",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "^0.9.0",
-    "moment": "^2.24.0",
-    "mustache": "^3.2.1",
-    "node-sass": "^4.13.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "ora": "^4.0.3",
-    "postcss-loader": "^3.0.0",
+    "html-webpack-plugin": "^5.0.0-alpha.17",
+    "html-webpack-tags-plugin": "^2.0.17",
+    "inquirer": "^7.3.3",
+    "ko-babel-app": "^8.0.2",
+    "less": "^3.13.0",
+    "less-loader": "^7.1.0",
+    "lodash": "^4.17.20",
+    "mini-css-extract-plugin": "^1.3.3",
+    "mustache": "^4.1.0",
+    "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "ora": "^5.1.0",
+    "postcss-loader": "^4.1.0",
     "pushstate-server": "^3.1.0",
-    "react-dev-utils": "^9.0.3",
-    "request": "^2.88.0",
-    "request-progress": "^3.0.0",
-    "request-promise": "^4.2.5",
-    "sass-loader": "^8.0.0",
-    "shelljs": "^0.8.3",
-    "style-loader": "^1.1.2",
-    "ts-loader": "^6.2.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.4",
+    "react-dev-utils": "^11.0.1",
+    "sass-loader": "^10.1.0",
+    "shelljs": "^0.8.4",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.12",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.1.3",
     "url": "^0.11.0",
-    "url-loader": "^3.0.0",
-    "urllib": "^2.34.2",
+    "url-loader": "^4.1.1",
+    "urllib": "^2.36.1",
     "user-home": "^2.0.0",
-    "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.10.1",
+    "webpack-bundle-analyzer": "^4.2.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-merge": "^4.2.2",
+    "webpack-merge": "^5.7.0",
     "webpack-simple-progress-plugin": "^0.0.4"
   },
   "gitHead": "b62d264650b9bb52d3c3316cfb69c45ed71d34a6"
