--- a/packages/ko-script/package.json
+++ b/packages/ko-script/package.json
@@ -58,6 +58,7 @@
     "compressing": "^1.5.1",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "decamelize": "^4.0.0",
     "deep-assign": "^3.0.0",
     "deepmerge": "^4.2.2",
@@ -76,12 +77,11 @@
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^1.3.3",
     "mustache": "^4.1.0",
-    "node-sass": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "ora": "^5.1.0",
     "postcss-loader": "^4.1.0",
     "pushstate-server": "^3.1.0",
     "react-dev-utils": "^11.0.1",
+    "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "shelljs": "^0.8.4",
     "style-loader": "^2.0.0",
