修改ko-request,下载文件时处理返回数据

--- a/packages/ko-util/package.json
+++ b/packages/ko-util/package.json
@@ -10,7 +10,8 @@
   "homepage": "",
   "author": "dtux",
   "main": "lib/index.js",
-  "module": "es/index.js",
+  "module": "lib/index.js",
+  "files": ["lib"],
   "license": "ISC",
   "publishConfig": {
     "access": "public",
