--- a/packages/ko-script/package.json
+++ b/packages/ko-script/package.json
@@ -65,10 +65,10 @@
     "detect-port": "^1.3.0",
     "download-git-repo": "^3.0.2",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.0.6",
+    "fork-ts-checker-webpack-plugin": "^6.0.8",
     "happypack": "^5.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^5.0.0-alpha.17",
+    "html-webpack-plugin": "^4.5.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "inquirer": "^7.3.3",
     "ko-babel-app": "^8.0.2",
@@ -92,14 +92,14 @@
     "url-loader": "^4.1.1",
     "urllib": "^2.36.1",
     "user-home": "^2.0.0",
-    "vue-loader": "^15.9.5",
+    "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.10.1",
-    "webpack-bundle-analyzer": "^4.2.0",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-merge": "^5.7.0",
+    "webpack-merge": "^5.7.3",
     "webpack-simple-progress-plugin": "^0.0.4"
   },
   "gitHead": "b62d264650b9bb52d3c3316cfb69c45ed71d34a6"
