--- a/packages/ko-request/package.json
+++ b/packages/ko-request/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ko-request",
 	"author": "kodesign",
-	"version": "1.3.7-alpha.2",
+	"version": "1.3.7",
 	"description": "基于axios和fetch封装的request工具，添加有拦截器，方便快速配置使用",
 	"main": "lib/index.js",
 	"module": "lib/index.js",
