--- a/packages/ko-script/package.json
+++ b/packages/ko-script/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ko-script",
   "author": "kodesign",
-  "version": "4.25.11-alpha.0",
+  "version": "5.0.0",
   "description": "基于webpack打包cli工具",
   "main": "index.js",
   "module": "",
@@ -64,6 +64,10 @@
     "deepmerge": "^4.2.2",
     "detect-port": "^1.3.0",
     "download-git-repo": "^3.0.2",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.21.5",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.8",
     "happypack": "^5.0.1",
@@ -71,19 +75,15 @@
     "html-webpack-plugin": "^4.5.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "inquirer": "^7.3.3",
-    "ko-babel-app": "^8.0.2",
+    "ko-babel-app": "^8.0.3",
     "less": "^3.13.0",
     "less-loader": "^7.1.0",
+    "lint-staged": "^10.5.2",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^1.3.3",
     "mustache": "^4.1.0",
     "ora": "^5.1.0",
     "postcss-loader": "^4.1.0",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-react": "^7.21.5",
-    "lint-staged": "^10.5.2",
     "prettier": "^2.2.1",
     "pushstate-server": "^3.1.0",
     "react-dev-utils": "^11.0.1",
