--- a/packages/ko-util/package.json
+++ b/packages/ko-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ko-util",
-  "version": "1.11.6-alpha.1",
+  "version": "1.11.6",
   "description": "袋鼠工具库",
   "scripts": {
     "build": "rollup -c && npm run build:lib",
@@ -11,7 +11,9 @@
   "author": "dtux",
   "main": "lib/index.js",
   "module": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "license": "ISC",
   "publishConfig": {
     "access": "public",
