--- a/packages/ko-script/package.json
+++ b/packages/ko-script/package.json
@@ -83,6 +83,7 @@
     "mini-css-extract-plugin": "^1.3.3",
     "mustache": "^4.1.0",
     "ora": "^5.1.0",
+    "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
     "pushstate-server": "^3.1.0",
