chore: update depedencies

--- a/packages/ko-babel-app/package.json
+++ b/packages/ko-babel-app/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "@kodesign/ko-babel-app",
-  "version": "8.0.1",
+  "name": "ko-babel-app",
+  "version": "8.0.16",
   "description": "ko babel presets",
   "main": "index.js",
-  "module": "",
-  "scripts": {},
   "keywords": [
     "ko",
     "base",
@@ -15,45 +13,44 @@
     "plugins",
     "babel-presets"
   ],
-  "author": "kodesign",
-  "license": "ISC",
+  "author": "ko",
+  "license": "MIT",
   "publishConfig": {
     "access": "public",
     "registry": "http://registry.npmjs.org"
   },
-  "homepage": "",
+  "homepage": "https://github.com/DTStack/ko",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dtux-kangaroo/ko-resouce/tree/master/react-resource/blocks/about"
+    "url": "https://github.com/DTStack/ko"
   },
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/plugin-proposal-decorators": "7.12.1",
-    "@babel/plugin-proposal-do-expressions": "7.12.1",
-    "@babel/plugin-proposal-export-default-from": "7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "7.12.1",
-    "@babel/plugin-proposal-function-bind": "7.12.1",
-    "@babel/plugin-proposal-function-sent": "7.12.1",
-    "@babel/plugin-proposal-json-strings": "7.12.1",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.1",
-    "@babel/plugin-proposal-numeric-separator": "7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "7.12.1",
-    "@babel/plugin-proposal-pipeline-operator": "7.12.1",
-    "@babel/plugin-proposal-throw-expressions": "7.12.1",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-decorators": "7.14.5",
+    "@babel/plugin-proposal-do-expressions": "7.14.5",
+    "@babel/plugin-proposal-export-default-from": "7.14.5",
+    "@babel/plugin-proposal-export-namespace-from": "7.14.5",
+    "@babel/plugin-proposal-function-bind": "7.14.5",
+    "@babel/plugin-proposal-function-sent": "7.14.5",
+    "@babel/plugin-proposal-json-strings": "7.14.5",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.14.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.14.5",
+    "@babel/plugin-proposal-numeric-separator": "7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "7.14.5",
+    "@babel/plugin-proposal-pipeline-operator": "7.14.5",
+    "@babel/plugin-proposal-throw-expressions": "7.14.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.4",
-    "@babel/plugin-transform-destructuring": "^7.12.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/plugin-transform-regenerator": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "7.12.1",
-    "@babel/preset-react": "7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@babel/runtime": "^7.12.1",
-    "babel-plugin-import": "^1.13.1"
-  },
-  "gitHead": "b62d264650b9bb52d3c3316cfb69c45ed71d34a6"
+    "@babel/plugin-transform-destructuring": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@babel/plugin-transform-regenerator": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "7.14.5",
+    "@babel/preset-react": "7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/runtime": "^7.14.6",
+    "babel-plugin-import": "^1.13.3"
+  }
 }
